# heart-vis

./: .clangd  .gitignore  CMakeLists.txt  build.fish  main.js  make.fish  package-lock.json  package.json  riunioni.md  todo.md  vite.config.js  wl-copy
.github/workflows/: deploy.yml
.obsidian/: app.json  appearance.json
.obsidian/plugins/obsidian-style-settings/: data.json
assets/mesh/: 2-LA-FA.mesh.ply  2-LA-FA.mesh_bipolar.ply  2-LA-FA.mesh_eml.ply  2-LA-FA.mesh_exteml.ply  2-LA-FA.mesh_exteml_.ply  2-LA-FA.mesh_lat.ply  2-LA-FA.mesh_scar.ply  2-LA-FA.mesh_unipolar.ply  2-LA-FA.mesh_unipolar_.ply  2-LA.mesh_bipolar.ply  2-LA.mesh_eml.ply  2-LA.mesh_exteml_.ply  simple.ply  test.ply
assets/ply/: 2-LA-FA.mesh_bipolar.ply  2-LA-FA.mesh_exteml.ply  2-LA-FA.mesh_scar.ply  2-LA-FA.mesh_unipolar.ply  2-LA.mesh_bipolar.ply  2-LA.mesh_eml.ply  2-LA.mesh_exteml.ply  2-LA.mesh_lat.ply  2-LA.mesh_scar.ply  2-LA.mesh_unipolar.ply  simple.ply
cbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: Mesh.cpp  Mesh.h  ce.fish  index.html  main.cpp  mesh.cpp  mesh.h  mesh.hpp  triangle.cpp  triangle.h  utils.cpp  utils.h  utils.hpp  vector3.cpp  vector3.h  vertex.cpp  vertex.h  vertex.hpp
src/c++/: triangle.hpp  utils.hpp
src/cpp/: bindings.cpp  globals.hpp  main.cpp  mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp  turbo_colormap.cpp  turbo_colormap.hpp  utils.cpp  utils.hpp  vertex.cpp  vertex.hpp
src/css/: styles.css
src/glsl/: dynamic-animation-fragment.glsl  dynamic-fragment.glsl  dynamic-vertex.glsl  fragment.glsl  static-fragment.glsl  static-vertex.glsl  vertex.glsl
src/html/: index.html
src/js/: main.js
src/js/core/: renderer.js  scene.js
src/js/emscripten/: heart.out.wasm
src/js/interaction/: event-handlers.js  file-handler.js  file-handlers.js  file-processing.js  vertex-picker.js
src/js/loaders/: mesh-processing.js
src/js/state/: state.js
src/js/test-meshes/: load-test-meshes.js
src/js/utils/: math-utils.js  mathUtils.js
src/js/visualization/: color-gauge.js  material-switch.js  material-update.js  scene.js  shader-update.js
src/web/: index.html  main.js  styles.css
src/web/css/: styles.css
src/web/html/: index.html
src/web/js/: main.js
src/web/libs/: PLYLoader.js
